[package]
name = "json-diff"
version = "0.1.0"
authors = ["Richard Capraro <richard.capraro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
colored = "2.0"
assert-json-diff = "1.1"
